assets/css/main.css
/* ... */
			table tbody tr:nth-child(2n + 1) {
				background-color: rgba(144, 144, 144, 0.25);
			}

		table td {
			padding: 0.75em 0.75em;
		}

		table th {
			color: #fff;
			font-size: 0.9em;
			font-weight: 600;
			padding: 0 0.75em 0.75em 0.75em;
			text-align: left;
		}

		table thead {
			border-bottom: solid 2px #fff;
		}

		table tfoot {
			border-top: solid 2px #fff;
		}

		table.alt {
			border-collapse: separate;
		}

			table.alt tbody tr td {
				border: solid 1px #fff;
				border-left-width: 0;
				border-top-width: 0;
			}

				table.alt tbody tr td:first-child {
					border-left-width: 1px;
				}

			table.alt tbody tr:first-child td {
				border-top-width: 1px;
			}

			table.alt thead {
				border-bottom: 0;
			}

			table.alt tfoot {
				border-top: 0;
			}

/* Button */

	input[type="submit"],
	input[type="reset"],
	input[type="button"],
	button,
	.button {
		-moz-appearance: none;
		-webkit-appearance: none;
		-ms-appearance: none;
		appearance: none;
		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
		background-color: transparent;
		border-radius: 3px;
		border: 0;
		box-shadow: inset 0 0 0 2px #fff;
		color: #fff;
		cursor: pointer;
		display: inline-block;
		font-size: 0.8em;
		font-weight: 600;
		height: 3.125em;
		letter-spacing: 0.225em;
		line-height: 3.125em;
		max-width: 30em;
		padding: 0 2.75em;
		text-align: center;
		text-decoration: none;
		text-transform: uppercase;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}

		input[type="submit"]:hover,
		input[type="reset"]:hover,
		input[type="button"]:hover,
		button:hover,
		.button:hover {
			background-color: rgba(144, 144, 144, 0.25);
		}

		input[type="submit"]:active,
		input[type="reset"]:active,
		input[type="button"]:active,
		button:active,
		.button:active {
			background-color: rgba(144, 144, 144, 0.5);
		}

		input[type="submit"].icon:before,
		input[type="reset"].icon:before,
		input[type="button"].icon:before,
		button.icon:before,
		.button.icon:before {
			margin-right: 0.5em;
		}

		input[type="submit"].fit,
		input[type="reset"].fit,
		input[type="button"].fit,
		button.fit,
		.button.fit {
			width: 100%;
		}

		input[type="submit"].small,
		input[type="reset"].small,
		input[type="button"].small,
		button.small,
		.button.small {
			font-size: 0.8em;
		}

		input[type="submit"].large,
		input[type="reset"].large,
		input[type="button"].large,
		button.large,
		.button.large {
			font-size: 1.35em;
		}

		input[type="submit"].primary,
		input[type="reset"].primary,
		input[type="button"].primary,
		button.primary,
		.button.primary {
			background-color: #A36453;
			box-shadow: none;
		}

			input[type="submit"].primary:hover,
			input[type="reset"].primary:hover,
			input[type="button"].primary:hover,
			button.primary:hover,
			.button.primary:hover {
				background-color: #ef5e4a !important;
			}

			input[type="submit"].primary:active,
			input[type="reset"].primary:active,
			input[type="button"].primary:active,
			button.primary:active,
			.button.primary:active {
				background-color: #eb341c !important;
			}

		input[type="submit"].disabled, input[type="submit"]:disabled,
		input[type="reset"].disabled,
		input[type="reset"]:disabled,
		input[type="button"].disabled,
		input[type="button"]:disabled,
		button.disabled,
		button:disabled,
		.button.disabled,
		.button:disabled {
			pointer-events: none;
			opacity: 0.25;
		}

		@media screen and (max-width: 736px) {

			input[type="submit"],
			input[type="reset"],
			input[type="button"],
			button,
			.button {
				height: 3.75em;
				line-height: 3.75em;
			}

		}

/* Features */

	.features {
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		gap: 2em;
		margin: 0 0 2em 0;
		padding: 0;
		list-style: none;
		max-width: 1200px;
		margin-left: auto;
		margin-right: auto;
	}

		.features li {
			position: relative;
			padding: 2em;
			background: rgba(255, 255, 255, 0.05);
			border-radius: 0.5em;
			text-align: center;
			transition: all 0.3s ease;
			aspect-ratio: 1;
			display: flex;
			flex-direction: column;
			justify-content: center;
			align-items: center;
			background-size: cover;
			background-position: center;
			background-color: rgba(0, 0, 0, 0.07);
		}

			.features li a {
				display: flex;
				flex-direction: column;
				justify-content: center;
				align-items: center;
				width: 100%;
				height: 100%;
				text-decoration: none;
				color: inherit;
				border-bottom: none !important;
			}

			.features li:hover {
				transform: scale(1.05);
				box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
			}

			.features li h3 {
				font-size: 1.4em;
				font-weight: 800;
				letter-spacing: 0.25em;
				margin: 0 0 0.5em 0;
				transition: all 0.3s ease;
			}

			.features li:hover h3 {
				/* color: #69806B; */
				transform: scale(1.1);
				text-shadow: 0 0 0.5em rgba(33, 178, 166, 0.5);
			}

			.features li p {
				font-size: 0.85em;
				line-height: 1.3;
				margin: 0;
				max-width: 85%;
				transition: color 0.3s ease;
			}

			@media screen and (max-width: 980px) {
				.features {
					grid-template-columns: repeat(2, 1fr);
					max-width: 800px;
				}

				.features li {
					padding: 2em;
				}
			}

			@media screen and (max-width: 736px) {
				.features {
					grid-template-columns: 1fr;
					max-width: 400px;
				}

				.features li {
					padding: 2em;
				}
			}

			.features li:nth-child(1) {
				background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.7)), url("../../images/restaurovani.jpg");
			}

			.features li:nth-child(2) {
				background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.7)), url("../../images/ratan.jpg");

			}
/* ... */

